--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.7.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
