--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
