--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^1.29.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
