--- a/package.json
+++ b/package.json
@@ -14,18 +14,15 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.29.0",
     "connect-mongo": "^4.6.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
-    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0",
-    "serve-favicon": "^2.5.0"
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
