--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js -e js,css",
-    "seed": "node bin/seed.js",
+    "seed": "ts-node bin/seed.ts",
     "seed:clean": "node bin/removeShowtimes.js",
     "seed:refresh": "npm run seed:clean && npm run seed"
   },
@@ -19,12 +19,15 @@
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.8",
+    "mongoose": "^6.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/node": "^18.8.0",
+    "@types/readline-sync": "^1.4.4",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.9.1"
   }
 }
