ts-node quick fix

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.ts",
+    "start": "ts-node server.ts",
     "dev": "nodemon server.ts -e js,css",
     "seed": "ts-node bin/seed.ts",
     "seed:clean": "node bin/removeShowtimes.js",
@@ -22,12 +22,12 @@
     "mongoose": "^6.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.8.0",
     "@types/readline-sync": "^1.4.4",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.9.1"
+    "nodemon": "^2.0.15"
   }
 }
