--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "ts-node server.ts",
-    "dev": "nodemon server.ts -e js,css",
+    "dev": "nodemon server.ts -e js,css,ts",
     "seed": "ts-node bin/seed.ts",
     "seed:clean": "node bin/removeShowtimes.js",
     "seed:refresh": "npm run seed:clean && npm run seed"
