--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "mongoose": "^6.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0",
-    "ts-node": "^10.9.1"
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.8.0",
     "@types/readline-sync": "^1.4.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.9.1",
+    "tsc": "^2.0.4"
   }
 }
