--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "mongoose": "^6.6",
     "morgan": "^1.10.0",
     "multer": "^2.0.0-rc.3",
-    "multer-storage-cloudinary": "^4.0.0",
-    "typescript": "^4.9.3"
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.8.0",
     "@types/readline-sync": "^1.4.4",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
