--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.0",
     "@types/readline-sync": "^1.4.4",
     "nodemon": "^2.0.15"
