--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/readline-sync": "^1.4.4",
     "nodemon": "^2.0.15"
   }
