--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,14 +24,20 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-npm-${{ hashFiles('./package-lock.json') }}
-      - name: Install dependencies
+      - id: install
+        name: Install dependencies
         run: npm install
-      - name: Get latest showtimes
+      - id: allo
+        name: Get latest showtimes
         run: npm run seed showtimes create
-      - name: Get latest showtimes for MK2
+        if: ${{ steps.install.conclusion == 'success' }}
+      - id: mk2
+        name: Get latest showtimes for MK2
         run: npm run seed showtimes mk2
+        if: ${{ steps.install.conclusion == 'success' }}
       - name: Get latest TMDB data
         run: npm run seed movies tmdb
+        if: ${{ steps.mk2.conclusion == 'success' || steps.allo.conclusion == 'success'  }}
   setting-summaries:
     name: 'Setting summaries'
     runs-on: ubuntu-latest
