--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,10 +1,10 @@
-name: Schedule
-run-name: Scheduled build
+name: Update showtimes
+run-name: Update showtimes
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 7 * * 1,2'
+    - cron: '0 7 * * 2'
 
 env:
   MONGODB_URI: ${{ secrets.MONGODB_URI }}
@@ -16,6 +16,7 @@ jobs:
   automated-tasks:
     name: Automated tasks
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -27,17 +28,11 @@ jobs:
       - id: install
         name: Install dependencies
         run: npm install
-      - id: allo
-        name: Get latest showtimes
-        run: npm run seed showtimes create
-        if: ${{ steps.install.conclusion == 'success' }}
       - id: mk2
         name: Get latest showtimes for MK2
         run: npm run seed showtimes mk2
-        if: ${{ steps.install.conclusion == 'success' }}
       - name: Get latest TMDB data
         run: npm run seed movies tmdb
-        if: ${{ steps.mk2.conclusion == 'success' || steps.allo.conclusion == 'success'  }}
   setting-summaries:
     name: 'Setting summaries'
     runs-on: ubuntu-latest
