--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "cd ./build && node server.js",
     "build": "tsc",
     "dev": "nodemon server.ts -e js,css,ts",
+    "test": "vitest run",
     "seed": "ts-node bin/seed.ts",
     "seed:clean": "node bin/removeShowtimes.js",
-    "seed:refresh": "npm run seed:clean && npm run seed"
+    "seed:refresh": "yarn seed:clean && yarn seed"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -35,6 +36,7 @@
     "@types/readline-sync": "^1.4.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vitest": "^0.29.3"
   }
 }
