--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-jwt": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6",
+    "mongodb": "^4.1.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.0-rc.3",
     "multer-storage-cloudinary": "^4.0.0"
@@ -33,7 +34,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.8.0",
+    "@types/node": "^18.15.0",
     "@types/readline-sync": "^1.4.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.1",
