--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
+    "vite": "^4.2.0",
     "vitest": "^0.29.3"
   }
 }
